8534
However, and I couldn't tell it from your presentation because there seems to be a newline I don't have, found doesn't == require.
```
./a.scala:39: error: type mismatch;
 found   : candidateUpperObject.result.Lower
 required: candidateUpperObject.result.Lower where val candidateUpperObject: CanonicalGeneration.this.Upper
      if canonicalReductionOrbit.contains(candidateUpperObject.inverse)
                                                               ^
one error found
```
The required type is an existential with a clause involving candidateUpperObject, and the found isn't.
